# hello-sokol

./: CMakeLists.txt  README.md  main.c  sokol_impl.c  sokol_impl.m
lib/: fontstash.h  stb_truetype.h
